--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
+langchain==0.0.206
+
+PyMySQL==1.1.0
+PyPDF2==3.0.1
+python-dotenv==1.0.0
+streamlit==1.24.1
+streamlit_chat==0.1.1
 aiohttp==3.8.4
 aiosignal==1.3.1
 anyio==3.6.2
@@ -34,7 +41,6 @@ idna==3.4
 importlib-metadata==6.6.0
 Jinja2==3.1.2
 joblib==1.2.0
-langchain==0.0.161
 lxml==4.9.2
 lz4==4.3.2
 Markdown==3.4.3
